Various fixes
Attempt at fixing bugs